--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "license": "GPL",
   "private": true,
   "scripts": {
-    "start": "cross-env NODE_ENV=development nodemon --harmony index.js",
+    "dev": "cross-env NODE_ENV=development nodemon --harmony index.js",
     "check": "cross-env NODE_ENV=production nodemon --harmony index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "p": "pm2 deploy production"
+    "deploy": "pm2 deploy production"
   },
   "repository": {
     "type": "git",
@@ -40,7 +40,7 @@
     "marked": "^0.3.6",
     "moment": "^2.18.1",
     "mongodb": "^2.2.25",
-    "mongoose": "^4.9.3",
+    "mongoose": "^4.13.18",
     "node-fetch": "^1.6.3",
     "pinyin": "^2.8.3",
     "pm2": "^2.8.0",
